data cleaning, pearson matrix calculation and visualisation

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-
 	<head>
+        <meta charset="UTF-8">
 		<script src="https://d3js.org/d3.v5.js"></script>
         <script src="script.js"></script>
 		<title> D3 Tutorial </title>
@@ -19,8 +19,7 @@
 	</head>
 
 	<body>
-		<div id="mutualInformationMatrix">
-			<svg></svg>
+		<div id="correlationMatrix">
 		</div>
         <div id="colourBar">
             <svg></svg>
