--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <meta charset="UTF-8">
 		<script src="https://d3js.org/d3.v5.js"></script>
         <script src="script.js"></script>
-		<title> D3 Tutorial </title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+		<title>Economic Freedom Index</title>
 		
 		<style>
 		<!--specifies that our DIV and SVG elements takes the full width and height of the HTML window-->
@@ -22,7 +23,6 @@
 		<div id="correlationMatrix">
 		</div>
         <div id="colourBar">
-            <svg></svg>
         </div>
         <div id="map">
             <svg></svg>
