--- a/index.html
+++ b/index.html
@@ -7,23 +7,13 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
 		<title>Economic Freedom Index</title>
-		
-		<style>
-		<!--specifies that our DIV and SVG elements takes the full width and height of the HTML window-->
-			div{
-				width: 100%;
-				height: 100%
-			}
-			svg{				
-				width: 100%;		
-				height: 100%; 
-			}
-		</style>
 	</head>
 
 	<body>
         <div class="container">
+            <h1>Economic Freedom Index</h1>
             <div class="row">
+                <h2>Correlation Between Economic Performance and Freedom Indices</h2>
                 <div class="col-lg-8">
                     <div id="correlationMatrix"></div>
                 </div>
