--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="crossorigin=""/>
         <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js" integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="crossorigin=""></script>
 		<script src="https://d3js.org/d3.v5.js"></script>
-        <script src="http://d3js.org/topojson.v0.min.js"></script>
         <script src="matrix.js"></script>
         <script src="spider.js"></script>
         <script src="map.js"></script>
+        <script src="barchart.js"></script>
         <script src="script.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
 		<title>Economic Freedom Index</title>
@@ -17,7 +17,7 @@
 	<body>
         <h1>Economic Freedom Index</h1>
         <div id="correlationMatrix"></div>
-        <div id="wrappedBarChart"></div>
+        <div id="barChart"></div>
         <div id="map"></div>
         <div id="spider"></div>
 	</body>
