--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
 	<body>
         <h1>Economic Freedom Index</h1>
+        <p id="description" class="description">
+        The <a href="https://www.kaggle.com/lewisduncan93/the-economic-freedom-index">Economic Freedom Index Dataset</a> combines information about economic
+        performances of countries worldwide over the past 2 decades with the 12
+        "freedom index" metrics that indicate the extent of economic freedom and
+        adherence to human rights in each country. This visualisation aims to
+        help the user explore the differences between country economies, the
+        values of freedom indices and the correlation between them.
+        </p>
+        <br />
         <div id="correlationMatrix"></div>
         <div id="barChart"></div>
         <div id="map"></div>
